<resources>
    <string name="app_name">iSpy</string>
    <string name="top_5_highscores">Top 5 HIghscores</string>
    <string name="score1">score1</string>
    <string name="score2">score2</string>
    <string name="score3">score3</string>
    <string name="score4">score4</string>
    <string name="score5">score5</string>
    <string name="reset">Reset</string>
    <string name="username">UserName:</string>
    <string name="back">Back</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="draw_pile">\ \    Draw Pile: \</string>
    <string name="draw">draw</string>
    <string name="splash_skip_btn">Tap Here to Skip</string>
    <string name="splash_quit_btn">Quit</string>
    <string name="splash_title1_text">Superheroes</string>
    <string name="splash_title2_text">Logogang</string>
    <string name="splash_author_text">A Game By:\nShaheen Eshghi\nHalakseka Jegatheesan\nMikhail Alexeev\nNargis Ghiasi</string>
    <string name="help_title_text">Help</string>
    <string name="help_back_btn">Back</string>
    <string name="help_desc_text">Inspired by Spot It, iSpy will display two stacks of cards with a number of pictures on each card at the beginning of each game. There is always
        exactly one image that matches between all the cards; you need to match the image from the newly drawn card to the card in the discard pile. You have the choice of choosing the
        theme of what images you want to use (Superheros or Logos). If you want to switch up the images, you can choose your own from Flickr or import from photo gallery to save/edit
        those options. If you want to challenge yourself even more, enable the text feature to match images and their corresponding text, match text-to-text, or mixed, and choose options
        between easy/medium/hard for rotated and different sized image sets! Another way to challenge yourself is having the freedom of choosing deck size and order in the options menu.
        New features also includes exporting the deck on your own device so you can practice or print. First time playing? Give it a go with the default game and start making your way up
        to the highest and fastest score.
    </string>
    <string name="main_play_btn">Play</string>
    <string name="main_quit_btn">Quit</string>
    <string name="main_help_btn">Help</string>
    <string name="main_option_btn">Options</string>
    <string name="main_hscore_btn">Scores</string>
    <string name="main_title_text">Main Menu</string>
    <string name="options_back_btn">Back</string>
    <string name="themes_rgheader_text">Choose a theme:</string>
    <string name="themes_logo_rbtn">LogogangⓇ</string>
    <string name="themes_heroes_rbtn">Superheroes</string>
    <string name="themes_flickr_rbtn">Custom/Flickr</string>
    <string name="size_rgheader2_text">Deck Size</string>
    <string name="size_five_rbtn">5</string>
    <string name="size_ten_rbtn">10</string>
    <string name="size_fifteen_rbtn">15</string>
    <string name="size_twenty_rbtn">20</string>
    <string name="size_all_rbtn">ALL</string>
    <string name="mode_rgheader3_text">Word mode</string>
    <string name="mode_enabled_rbtn">Enabled</string>
    <string name="mode_disabled_rbtn">Disabled</string>
    <string name="options_title_text">Options</string>
    <string name="clear_search">clear search</string>
    <string name="my_camera_roll">My Camera Roll</string>
</resources>