<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/display"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:background="#FFFFFF">

        <SearchView
            android:id="@+id/search_pics"
            android:layout_width="527dp"
            android:layout_height="88dp">

        </SearchView>

        <android.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0D313131"
            android:fitsSystemWindows="true"

            />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.FlickrGallery">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photo_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/clear"
                android:layout_width="@dimen/_155sdp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:background="@color/buttonColor"
                android:fontFamily="@font/press_start_2p"
                android:text="@string/clear_search"
                android:textColor="#FF5900"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@+id/photo_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/CameraRoll"
                android:layout_width="@dimen/_155sdp"
                android:layout_height="32dp"
                android:background="@color/buttonColor"
                android:fontFamily="@font/press_start_2p"
                android:text="@string/my_camera_roll"
                android:textColor="#FF5900"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@+id/photo_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/flickr_back"
                android:layout_width="@dimen/_155sdp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:background="@color/buttonColor"
                android:fontFamily="@font/press_start_2p"
                android:text="@string/back"
                android:textColor="#FF5900"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@+id/photo_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

